<resources>
    <string name="app_name">My maps</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Enter the name of the country or city:</string>
    <string name="Text2">Enter the latitude in the format nn.nnnn: </string>
    <string name="Text3">Enter the longitude in the format nn.nnnn: </string>
    <string name="Text4">Select a group of places: </string>
    <string name="Text5">Enter a place name: </string>
    <string name="Text6">Group of places: </string>
    <string name="Text7">Name of this place:</string>
    <string name="Text8">Information about the place: </string>
    <string name="Text9">Enter a new group of places: </string>
    <string name="Button">Add</string>
    <string name="Button2">Cancel</string>
    <string name="Button3">Edit</string>
    <string name="Button4">Delete</string>
    <string name="Button5">Save</string>
    <string name="Button7">Settings</string>
    <string name="Name1">Map</string>
    <string name="Name2">Found new maps:</string>
    <string name="Name3">Enter information about the place:</string>
    <string name="Name4">No additional information</string>
    <string name="Name5">Types of places:</string>
    <string name="Name6">Add a group of places</string>
    <string name="Name7">List of markers</string>
    <string name="Name8">GPS settings</string>
    <string name="Name9">GPS isnt turn on. You want to go to the GPS settings?</string>
    <string name="Name10">Your location:</string>
    <string name="Name11">Point coordinates:</string>
    <string name="Toast">You have not entered the name of a country or city</string>
    <string name="Toast2">You have not entered the coordinates</string>
    <string name="Toast3">You have entered wrong coordinates</string>
    <string name="Toast4">Maps in format * .map not found. Check the correctness of their position</string>
    <string name="Toast5">You did not choose a group of places</string>
    <string name="Toast6">You did not enter a place name</string>
    <string name="Toast7">You have not selected maps. Select at least one map</string>
    <string name="Toast8">You have not entered the name of a group of places</string>
    <string name="Toast9">The group places already present </string>
</resources>
