<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text6"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Text4"
            android:gravity="center_horizontal|center_vertical"
            android:id="@+id/txtView2"
            android:textStyle="bold"
            android:background="@drawable/am"
            android:layout_gravity="center_horizontal|center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text7"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editText5"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="15sp"
        android:background="@drawable/am"
        android:layout_gravity="center_horizontal|center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text8"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/editText6"
        android:textSize="15sp"
        android:background="@drawable/am"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/Button5"
            android:id="@+id/button7"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/Button2"
            android:id="@+id/button8"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>