<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:orientation="vertical"
    android:background="#111111"
    android:padding="10dp"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/Text"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        >

    </EditText>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/Text2"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        >

    </EditText>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="18"
        android:textColor="#ffffff"
        android:text="@string/Text3"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/input_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        >

    </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/Button"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/Button2"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>